--- a/src/components/native/native.component.html
+++ b/src/components/native/native.component.html
@@ -1,3 +1,3 @@
-<video controls>
+<video controls #videoElement>
   <source *ngFor="let source of sources; let sourceIndex = index" [src]="source.src" />
 </video>
