resizing and passthrough of video parameters

--- a/src/components/native/native.component.html
+++ b/src/components/native/native.component.html
@@ -1,3 +1,6 @@
-<video controls #videoElement>
+<video 
+  [controls]="controls" [autoplay]="autoplay" [loop]="loop"
+  (load)="onEvent('load',$event)"
+  #videoElement>
   <source *ngFor="let source of sources; let sourceIndex = index" [src]="source.src" />
 </video>
