--- a/src/components/video-container/video-container.component.html
+++ b/src/components/video-container/video-container.component.html
@@ -1,5 +1,6 @@
-Video Type: {{ videoType | async }}
-<ng-container [ngSwitch]="videoType">
-  <publication-vimeo-player *ngSwitchCase="0" [node]="node"></publication-vimeo-player>
-  <publication-native-player *ngSwitchCase="1" [node]="node"></publication-native-player>
+<ng-container *ngIf="videoData" [ngSwitch]="videoType">
+  <publication-native-video *ngSwitchCase="0" 
+    [controls]="controls" [autoplay]="autoplay" [loop]="loop" (stateChanges)="onChildStateChange($event)" [videoData]="videoData" ([playing])="playing"></publication-native-video>
+  <publication-vimeo-player *ngSwitchCase="1" 
+    [controls]="controls" [autoplay]="autoplay" [loop]="loop" (stateChanges)="onChildStateChange($event)" [videoData]="videoData" ([playing])="playing"></publication-vimeo-player>  
 </ng-container>
