--- a/src/components/native/native.component.html
+++ b/src/components/native/native.component.html
@@ -1,6 +1,11 @@
 <video 
   [controls]="controls" [autoplay]="autoplay" [loop]="loop"
-  (load)="onEvent('load',$event)"
+  (loadstart)="onEvent('loading',$event)"
+  (canplay)="onEvent('ready',$event)"
+  (play)="onEvent('playing',$event)"
+  (playing)="onEvent('playing',$event)"
+  (pause)="onEvent('paused',$event)"
+  (ended)="onEvent('finished',$event)"
   #videoElement>
   <source *ngFor="let source of sources; let sourceIndex = index" [src]="source.src" />
 </video>
