introduce `muted` option for html5 videos

--- a/src/components/native/native.component.html
+++ b/src/components/native/native.component.html
@@ -1,5 +1,6 @@
 <video 
   [controls]="controls" [autoplay]="autoplay" [loop]="loop"
+  [muted]="muted"
   (loadstart)="onEvent('loading',$event)"
   (canplay)="onEvent('ready',$event)"
   (play)="onEvent('playing',$event)"
