--- a/src/components/video-container/video-container.component.html
+++ b/src/components/video-container/video-container.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="videoData" [ngSwitch]="videoType">
-  <publication-native-video *ngSwitchCase="0" 
-    [controls]="controls" [autoplay]="autoplay" [loop]="loop" (stateChanges)="onChildStateChange($event)" [videoData]="videoData" ([playing])="playing"></publication-native-video>
-  <publication-vimeo-player *ngSwitchCase="1" 
-    [controls]="controls" [autoplay]="autoplay" [loop]="loop" (stateChanges)="onChildStateChange($event)" [videoData]="videoData" ([playing])="playing"></publication-vimeo-player>  
+  <publication-native-video *ngSwitchCase="0"
+    [controls]="controls" [autoplay]="autoplay" [muted]="muted" [loop]="loop" (stateChanges)="onChildStateChange($event)" [videoData]="videoData" ([playing])="playing"></publication-native-video>
+  <publication-vimeo-player *ngSwitchCase="1"
+    [controls]="controls" [autoplay]="autoplay" [loop]="loop" (stateChanges)="onChildStateChange($event)" [videoData]="videoData" ([playing])="playing"></publication-vimeo-player>
 </ng-container>
